# esp-temperature-monitor

esp/: platformio.ini
esp/src/: main.cpp
server/: Cargo.toml
server/src/: main.rs
