[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.1"
serde_json = "1.0.93"
chrono = "0.4.23"
tokio = { version = "1.25", features=["full"] }
influxdb = { version = "0.5.2", features = ["derive"] }
rand = "0.8.5"
